--- a/helm/templates/pr-devops-toolkit-1.yaml
+++ b/helm/templates/pr-devops-toolkit-1.yaml
@@ -16,9 +16,9 @@ spec:
       values: |
         image:
           repository: gcr.io/gene-for-testing/ci/dio/devops-toolkit
-          tag: 5f4d062
+          tag: 8f58378
         ingress:
-          host: pr-devops-toolkit-1.34.127.3.4.sslip.io
+          host: pr-devops-toolkit-1-preview.34.127.3.4.sslip.io
       version: v3
     path: helm
     repoURL: https://github.com/puppetlabs/devops-toolkit.git
